[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["psapi", "processthreadsapi","winnt","winbase", "impl-default", "memoryapi","winnt", "winbase"]}
winproc = "0.6.4"
pelite = "0.9.1"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
cbc = "0.1.2"
aes = "0.8"
base64 = "0.21.0"
rand = "0.8"
generic-array = "0.14.4"
typenum = "1.14.0"
reqwest = { version = "0.11",features = ["blocking"] }
ntapi = "0.4.0"

[lib]
name = "tools"
path = "src/lib.rs"

